js final update

--- a/js/js-final/js-final.html
+++ b/js/js-final/js-final.html
@@ -21,11 +21,12 @@
     <div class="ball" id="ball8">8</div>
     <div class="ball" id="ball9">9</div>
     
-<!-- Adding a delete button -->
+<!-- Adding a button -->
     <div id="phoneNumber">
     <label for="display">Enter your Phone Number: </label>
     <input type="text" id="display" readonly>
     <button id="deleteButton">Delete</button>
+    <button id="submitButton">Submit</button>
     </div>
   
     <canvas></canvas>
